--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -19,6 +19,9 @@
 
 .container-nav {
   display: flex;
-  justify-content: space-between;
   align-items: center;
+
+  @media screen and (max-width: 767px) {
+    justify-content: space-between;
+  }
 }
