--- a/sass/layout/_address.scss
+++ b/sass/layout/_address.scss
@@ -1,3 +1,111 @@
+.address-list {
+  @extend %list;
+  display: flex;
+}
+
+.address-item {
+  height: 18px;
+}
+
+.address-link {
+  @extend %link;
+
+  display: inline-flex;
+  align-items: center;
+
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+
+  letter-spacing: 0.02em;
+
+  color: #212121;
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:hover,
+  &:focus {
+    color: $accent-color;
+  }
+}
+
+.envelope {
+  width: 16px;
+  height: 16px;
+  fill: currentColor;
+  margin-right: 10px;
+}
+
+.smartphone {
+  width: 15px;
+  height: 15px;
+  fill: currentColor;
+  margin-right: 10px;
+}
+
+@media screen and (min-width: 1200px) {
+  .header-address {
+    margin-left: 305px;
+  }
+
+  .address-item:not(:last-child) {
+    margin-right: 30px;
+  }
+}
+
+@media screen and (max-width: 1199px) {
+  .header-address {
+    margin-left: 84px;
+  }
+
+  .address-list {
+    flex-direction: column;
+  }
+
+  .address-item:not(:last-child) {
+    margin-bottom: 10px;
+  }
+
+  .address-link {
+    font-size: 12px;
+    line-height: 1.167;
+  }
+
+  .envelope {
+    width: 14px;
+    height: 14px;
+    margin-right: 8px;
+  }
+
+  .smartphone {
+    width: 13px;
+    height: 13px;
+    margin-right: 8px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .header-address {
+    margin-left: 0;
+  }
+
+  .address-list {
+    align-items: center;
+  }
+
+  .address-item:not(:last-child) {
+    margin-bottom: 16px;
+  }
+
+  .address-link {
+    font-size: 18px;
+    line-height: 1.167;
+
+    color: #212121;
+  }
+}
+
 // .header-address {
 //   margin-left: auto;
 // }
@@ -28,18 +136,4 @@
 //   &:focus {
 //     color: $accent-color;
 //   }
-// }
-
-// .envelope {
-//   width: 16px;
-//   height: 16px;
-//   fill: currentColor;
-//   margin-right: 10px;
-// }
-
-// .smartphone {
-//   width: 15px;
-//   height: 15px;
-//   fill: currentColor;
-//   margin-right: 10px;
 // }
