--- a/sass/layout/_logo.scss
+++ b/sass/layout/_logo.scss
@@ -4,8 +4,8 @@
 
   font-family: $logo-font-family;
   font-weight: 700;
-  font-size: 24px;
-  line-height: 1.167;
+  font-size: 26px;
+  line-height: 1.2;
   color: $primery-black-color;
 }
 
@@ -16,4 +16,12 @@
 .logo-footer {
   color: $primery-white-color;
   margin-bottom: 8px;
+}
+
+@media screen and (max-width: 1199px) {
+  .logo {
+    font-size: 24px;
+    line-height: 1.167;
+    color: #212121;
+  }
 }
