--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -1,3 +1,84 @@
+.navigation-list {
+  @extend %list;
+  display: flex;
+}
+
+.navigation-link {
+  @extend %link;
+
+  letter-spacing: 0.02em;
+  color: #212121;
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:hover,
+  &:focus {
+    color: $accent-color;
+  }
+}
+
+.current {
+  color: $accent-color;
+}
+
+.line::after {
+  display: block;
+  content: '';
+
+  width: 100%;
+  height: 4px;
+
+  background: #2196f3;
+  border-radius: 2px;
+}
+
+@media screen and (max-width: 767px) {
+  .navigation {
+    padding-bottom: 60px;
+  }
+
+  .navigation-list {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .navigation-item:not(:last-child) {
+    margin-bottom: 40px;
+  }
+
+  .navigation-link {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 1.167;
+  }
+
+  .line::after {
+    margin-top: 8px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .navigation {
+    display: flex;
+    align-items: center;
+    &-list {
+      margin-left: 81px;
+    }
+    &-item:not(:last-child) {
+      margin-right: 50px;
+    }
+  }
+
+  .navigation-link {
+    display: block;
+    padding-top: 32px;
+    padding-bottom: 32px;
+
+    font-weight: 500;
+    line-height: 1.143;
+  }
+}
 // .navigation {
 //   display: flex;
 //   align-items: center;
