--- a/sass/components/_section.scss
+++ b/sass/components/_section.scss
@@ -1,3 +1,37 @@
+.section {
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
+.occupation-section {
+  display: none;
+}
+
+@media screen and (min-width: 1200px) {
+  .occupation-section {
+    display: block;
+  }
+}
+
+.section-title {
+  margin-top: 0;
+  margin-bottom: 50px;
+
+  font-size: 36px;
+  line-height: 1.16;
+  text-align: center;
+  color: $title-text-color;
+}
+
+//     margin-top: 0;
+//     margin-bottom: 50px;
+
+//     font-size: 36px;
+//     line-height: 1.16;
+//     text-align: center;
+//     color: $title-text-color;
+//   }
+
 // .section {
 //   padding-top: 94px;
 //   padding-bottom: 94px;
@@ -17,6 +51,6 @@
 //   padding-bottom: 0;
 // }
 
-// .hidden {
-//   display: none;
-// }
+.hidden {
+  display: none;
+}
