--- a/sass/layout/_features.scss
+++ b/sass/layout/_features.scss
@@ -1,19 +1,14 @@
 .features-list {
   @extend %list;
-  display: flex;
 }
 
 .features-item {
-  width: calc((100% - 90px) / 4);
-
-  &:not(:last-child) {
-    margin-right: 30px;
-  }
+  width: 450px;
 }
 
 .features-container-img {
   display: inline-flex;
-  width: 270px;
+  width: 100%;
   height: 120px;
   justify-content: center;
   align-items: center;
@@ -35,6 +30,7 @@
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
+  text-align: center;
   text-transform: uppercase;
   color: $title-text-color;
 }
@@ -43,3 +39,86 @@
   margin-top: 0;
   margin-bottom: 0;
 }
+
+@media screen and (max-width: 1199px) {
+  .features-item:not(:nth-last-child(-n + 2)) {
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .features-item:not(:last-child) {
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .features-list {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .features-item {
+    width: 354px;
+
+    &:nth-last-child(2n) {
+      margin-right: 30px;
+    }
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .features-item {
+    width: calc((100% - 90px) / 4);
+
+    &:not(:last-child) {
+      margin-right: 30px;
+    }
+  }
+}
+
+// .features-list {
+//   @extend %list;
+//   display: flex;
+// }
+
+// .features-item {
+//   width: calc((100% - 90px) / 4);
+
+//   &:not(:last-child) {
+//     margin-right: 30px;
+//   }
+// }
+
+// .features-container-img {
+//   display: inline-flex;
+//   width: 270px;
+//   height: 120px;
+//   justify-content: center;
+//   align-items: center;
+
+//   background-color: #f5f4fa;
+//   border-radius: 4px;
+//   margin-bottom: 30px;
+// }
+
+// .features-img {
+//   width: 70px;
+//   height: 70px;
+// }
+
+// .features-title {
+//   margin-top: 0mm;
+//   margin-bottom: 10px;
+
+//   font-weight: 700;
+//   font-size: 14px;
+//   line-height: 1.14;
+//   text-transform: uppercase;
+//   color: $title-text-color;
+// }
+
+// .features-text {
+//   margin-top: 0;
+//   margin-bottom: 0;
+// }
