--- a/css/main.css
+++ b/css/main.css
@@ -289,7 +289,18 @@ img {
   height: auto;
 }
 
-.navigation-list, .address-list, .features-list, .occupation-list, .team-list, .social-list, .customers-list, .footer-address-list {
+.list {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+.link {
+  text-decoration: none;
+  display: block;
+}
+
+.navigation-list, .address-list, .features-list, .occupation-list, .social-list, .customers-list, .footer-address-list {
   padding: 0;
   margin: 0;
   list-style: none;
@@ -352,19 +363,26 @@ img {
   display: none;
 }
 
+.section-title {
+  margin-top: 0;
+  margin-bottom: 30px;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 28px;
+  line-height: 1.179;
+  text-align: center;
+  color: #212121;
+}
+
 @media screen and (min-width: 1200px) {
   .occupation-section {
     display: block;
   }
-}
-
-.section-title {
-  margin-top: 0;
-  margin-bottom: 50px;
-  font-size: 36px;
-  line-height: 1.16;
-  text-align: center;
-  color: #212121;
+  .section-title {
+    margin-bottom: 50px;
+    font-size: 36px;
+    line-height: 1.16;
+  }
 }
 
 .hidden {
@@ -1096,10 +1114,18 @@ img {
   background: #f5f4fa;
 }
 
-.team-list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+.team .social-link {
+  color: #afb1b8;
+}
+
+.team-item {
+  width: 450px;
+  text-align: center;
+  padding-bottom: 24px;
+  background: #ffffff;
+  -webkit-box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12);
+          box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12);
+  border-radius: 0px 0px 4px 4px;
 }
 
 .team-img {
@@ -1109,35 +1135,58 @@ img {
 .team-name {
   margin: 0;
   margin-bottom: 10px;
+  font-style: normal;
   font-weight: 500;
   font-size: 16px;
-  line-height: 1.18;
+  line-height: 1.188;
   color: #212121;
 }
 
 .team-position {
   margin-top: 0;
   margin-bottom: 16px;
+  font-style: normal;
+  font-weight: normal;
   font-size: 16px;
-  line-height: 1.18;
+  line-height: 1.188;
+  color: #757575;
 }
 
-.team .social-link {
-  color: #afb1b8;
+@media screen and (max-width: 1199px) {
+  .team-item:not(:nth-last-child(-n + 2)) {
+    margin-bottom: 30px;
+  }
 }
 
-.team-item {
-  width: calc((100% - 90px) / 4);
-  text-align: center;
-  padding-bottom: 24px;
-  background: #ffffff;
-  -webkit-box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12);
-          box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12);
-  border-radius: 0px 0px 4px 4px;
+@media screen and (max-width: 767px) {
+  .team-item:not(:last-child) {
+    margin-bottom: 30px;
+  }
 }
 
-.team-item:not(:last-child) {
-  margin-right: 30px;
+@media screen and (min-width: 768px) {
+  .team-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+  .team-item {
+    width: 354px;
+  }
+  .team-item:nth-last-child(2n) {
+    margin-right: 30px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .team-item {
+    width: calc((100% - 90px) / 4);
+  }
+  .team-item:not(:last-child) {
+    margin-right: 30px;
+  }
 }
 
 .social-list {
