--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -289,6 +289,17 @@ img {
   height: auto;
 }
 
+.list {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+.link {
+  text-decoration: none;
+  display: block;
+}
+
 .navigation-list, .address-list, .social-list, .filters-list, .working-list, .footer-address-list {
   padding: 0;
   margin: 0;
@@ -352,19 +363,26 @@ img {
   display: none;
 }
 
+.section-title {
+  margin-top: 0;
+  margin-bottom: 30px;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 28px;
+  line-height: 1.179;
+  text-align: center;
+  color: #212121;
+}
+
 @media screen and (min-width: 1200px) {
   .occupation-section {
     display: block;
   }
-}
-
-.section-title {
-  margin-top: 0;
-  margin-bottom: 50px;
-  font-size: 36px;
-  line-height: 1.16;
-  text-align: center;
-  color: #212121;
+  .section-title {
+    margin-bottom: 50px;
+    font-size: 36px;
+    line-height: 1.16;
+  }
 }
 
 .hidden {
