--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -29,3 +29,14 @@ img {
   max-width: 100%;
   height: auto;
 }
+
+.list {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+.link {
+  text-decoration: none;
+  display: block;
+}
