--- a/sass/components/_section.scss
+++ b/sass/components/_section.scss
@@ -7,21 +7,42 @@
   display: none;
 }
 
+.section-title {
+  margin-top: 0;
+  margin-bottom: 30px;
+
+  font-style: normal;
+  font-weight: bold;
+  font-size: 28px;
+  line-height: 1.179;
+
+  text-align: center;
+
+  color: #212121;
+}
+
 @media screen and (min-width: 1200px) {
   .occupation-section {
     display: block;
   }
+
+  .section-title {
+    margin-bottom: 50px;
+
+    font-size: 36px;
+    line-height: 1.16;
+  }
 }
 
-.section-title {
-  margin-top: 0;
-  margin-bottom: 50px;
+// .section-title {
+//   margin-top: 0;
+//   margin-bottom: 50px;
 
-  font-size: 36px;
-  line-height: 1.16;
-  text-align: center;
-  color: $title-text-color;
-}
+//   font-size: 36px;
+//   line-height: 1.16;
+//   text-align: center;
+//   color: $title-text-color;
+// }
 
 //     margin-top: 0;
 //     margin-bottom: 50px;
