--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -1,39 +1,13 @@
 .team {
   background: #f5f4fa;
 
-  &-list {
-    @extend %list;
-    display: flex;
-  }
-
-  &-img {
-    margin-bottom: 30px;
-  }
-
-  &-name {
-    margin: 0;
-    margin-bottom: 10px;
-
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.18;
-    color: $title-text-color;
-  }
-
-  &-position {
-    margin-top: 0;
-    margin-bottom: 16px;
-
-    font-size: 16px;
-    line-height: 1.18;
-  }
   .social-link {
     color: #afb1b8;
   }
 }
 
 .team-item {
-  width: calc((100% - 90px) / 4);
+  width: 450px;
   text-align: center;
   padding-bottom: 24px;
 
@@ -41,8 +15,118 @@
   box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 1px 3px rgba(0, 0, 0, 0.12);
   border-radius: 0px 0px 4px 4px;
+}
 
-  &:not(:last-child) {
-    margin-right: 30px;
+.team-img {
+  margin-bottom: 30px;
+}
+
+.team-name {
+  margin: 0;
+  margin-bottom: 10px;
+
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.188;
+
+  color: #212121;
+}
+
+.team-position {
+  margin-top: 0;
+  margin-bottom: 16px;
+
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 1.188;
+
+  color: #757575;
+}
+
+@media screen and (max-width: 1199px) {
+  .team-item:not(:nth-last-child(-n + 2)) {
+    margin-bottom: 30px;
   }
 }
+
+@media screen and (max-width: 767px) {
+  .team-item:not(:last-child) {
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .team-list {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .team-item {
+    width: 354px;
+
+    &:nth-last-child(2n) {
+      margin-right: 30px;
+    }
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .team-item {
+    width: calc((100% - 90px) / 4);
+
+    &:not(:last-child) {
+      margin-right: 30px;
+    }
+  }
+}
+
+// .team {
+//   background: #f5f4fa;
+
+//   &-list {
+//     @extend %list;
+//     display: flex;
+//   }
+
+//   &-img {
+//     margin-bottom: 30px;
+//   }
+
+//   &-name {
+//     margin: 0;
+//     margin-bottom: 10px;
+
+//     font-weight: 500;
+//     font-size: 16px;
+//     line-height: 1.18;
+//     color: $title-text-color;
+//   }
+
+//   &-position {
+//     margin-top: 0;
+//     margin-bottom: 16px;
+
+//     font-size: 16px;
+//     line-height: 1.18;
+//   }
+//   .social-link {
+//     color: #afb1b8;
+//   }
+// }
+
+// .team-item {
+//   width: calc((100% - 90px) / 4);
+//   text-align: center;
+//   padding-bottom: 24px;
+
+//   background: $primery-white-color;
+//   box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14),
+//     0px 1px 3px rgba(0, 0, 0, 0.12);
+//   border-radius: 0px 0px 4px 4px;
+
+//   &:not(:last-child) {
+//     margin-right: 30px;
+//   }
+// }
