--- a/css/main.css
+++ b/css/main.css
@@ -300,13 +300,13 @@ img {
   display: block;
 }
 
-.navigation-list, .address-list, .features-list, .occupation-list, .social-list, .customers-list, .footer-address-list {
+.navigation-list, .address-list, .features-list, .occupation-list, .social-list, .footer-address-list {
   padding: 0;
   margin: 0;
   list-style: none;
 }
 
-.logo, .navigation-link, .address-link, .customers-link, .address-link-map, .address-link-mail,
+.logo, .navigation-link, .address-link, .address-link-map, .address-link-mail,
 .address-link-tel {
   text-decoration: none;
   display: block;
@@ -1236,17 +1236,15 @@ img {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-}
-
-.customers-item:not(:last-child) {
-  margin-right: 30px;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 .customers-link {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  width: 170px;
+  width: 210px;
   height: 90px;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
@@ -1268,6 +1266,39 @@ img {
 
 .customers-img {
   fill: currentColor;
+}
+
+@media screen and (max-width: 1199px) {
+  .customers-item:not(:nth-last-child(-n + 3)) {
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .customers-item:not(:nth-last-child(-n + 2)) {
+    margin-bottom: 30px;
+  }
+  .customers-item:not(:nth-child(2n)) {
+    margin-right: 30px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .customers-link {
+    width: 226px;
+  }
+  .customers-item:not(:nth-child(3n)) {
+    margin-right: 30px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .customers-link {
+    width: 170px;
+  }
+  .customers-item:not(:last-child) {
+    margin-right: 30px;
+  }
 }
 
 .button {
