--- a/sass/layout/_customers.scss
+++ b/sass/layout/_customers.scss
@@ -1,16 +1,11 @@
 .customers-list {
-  @extend %list;
   display: flex;
-}
-
-.customers-item:not(:last-child) {
-  margin-right: 30px;
+  flex-wrap: wrap;
 }
 
 .customers-link {
-  @extend %link;
   display: flex;
-  width: 170px;
+  width: 210px;
   height: 90px;
   justify-content: center;
   align-items: center;
@@ -32,3 +27,73 @@
 .customers-img {
   fill: currentColor;
 }
+
+@media screen and (max-width: 1199px) {
+  .customers-item:not(:nth-last-child(-n + 3)) {
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .customers-item:not(:nth-last-child(-n + 2)) {
+    margin-bottom: 30px;
+  }
+
+  .customers-item:not(:nth-child(2n)) {
+    margin-right: 30px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .customers-link {
+    width: 226px;
+  }
+
+  .customers-item:not(:nth-child(3n)) {
+    margin-right: 30px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .customers-link {
+    width: 170px;
+  }
+
+  .customers-item:not(:last-child) {
+    margin-right: 30px;
+  }
+}
+// .customers-list {
+//   @extend %list;
+//   display: flex;
+// }
+
+// .customers-item:not(:last-child) {
+//   margin-right: 30px;
+// }
+
+// .customers-link {
+//   @extend %link;
+//   display: flex;
+//   width: 170px;
+//   height: 90px;
+//   justify-content: center;
+//   align-items: center;
+
+//   color: #afb1b8;
+//   border: 1px solid #afb1b8;
+//   border-radius: 4px;
+
+//   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+//     border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+//   &:hover,
+//   &:focus {
+//     color: $accent-color;
+//     border: 1px solid #2196f3;
+//   }
+// }
+
+// .customers-img {
+//   fill: currentColor;
+// }
