--- a/sass/layout/_footer-forma.scss
+++ b/sass/layout/_footer-forma.scss
@@ -1,31 +1,67 @@
-.forma {
-  display: flex;
-  margin: 0;
-  .button {
-    margin-left: 12px;
-  }
-}
-
 .forma-email {
   display: block;
   padding: 18px 12px;
-  width: 358px;
 
-  color: #ffffff;
   background-color: #2f303a;
   border: 1px solid rgba(255, 255, 255, 0.3);
-  /* filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15)); */
+  box-sizing: border-box;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
 
   &:focus {
     outline: none;
   }
+}
 
-  &:focus:required:valid:not(:placeholder-shown) {
-    border: 1px solid green;
-  }
-
-  &:focus:required:invalid:not(:placeholder-shown) {
-    border: 1px solid red;
+@media screen and (max-width: 1199px) {
+  .forma-email {
+    width: 100%;
+    margin-bottom: 20px;
   }
 }
+
+@media screen and (min-width: 1200px) {
+  .forma {
+    display: flex;
+    margin: 0;
+    .button {
+      margin-left: 12px;
+    }
+  }
+
+  .forma-email {
+    width: 358px;
+  }
+}
+
+// .forma {
+//   display: flex;
+//   margin: 0;
+//   .button {
+//     margin-left: 12px;
+//   }
+// }
+
+// .forma-email {
+//   display: block;
+//   padding: 18px 12px;
+//   width: 358px;
+
+//   color: #ffffff;
+//   background-color: #2f303a;
+//   border: 1px solid rgba(255, 255, 255, 0.3);
+//   /* filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15)); */
+//   border-radius: 4px;
+
+//   &:focus {
+//     outline: none;
+//   }
+
+//   &:focus:required:valid:not(:placeholder-shown) {
+//     border: 1px solid green;
+//   }
+
+//   &:focus:required:invalid:not(:placeholder-shown) {
+//     border: 1px solid red;
+//   }
+// }
