--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -5,7 +5,7 @@
 }
 
 .hero-fon {
-  max-width: 767px;
+  // max-width: 767px;
   height: 400px;
   margin-left: auto;
   margin-right: auto;
@@ -45,7 +45,7 @@
 
 @media screen and (min-width: 768px) {
   .hero-fon {
-    max-width: 1199px;
+    // max-width: 1199px;
     background-image: linear-gradient(rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8)),
       url('../images/header-tablet.jpg');
   }
@@ -68,7 +68,7 @@
   }
 
   .hero-fon {
-    max-width: 1600px;
+    // max-width: 1600px;
     height: 600px;
     background-image: linear-gradient(rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8)),
       url('../images/header.jpg');
