--- a/sass/layout/_logo.scss
+++ b/sass/layout/_logo.scss
@@ -1,7 +1,4 @@
 .logo {
-  @extend %link;
-  // display: block;
-
   font-family: $logo-font-family;
   font-weight: 700;
   font-size: 26px;
@@ -23,5 +20,10 @@
     font-size: 24px;
     line-height: 1.167;
     color: #212121;
+  }
+
+  .logo-footer {
+    color: $primery-white-color;
+    margin-bottom: 20px;
   }
 }
