--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -300,7 +300,7 @@ img {
   display: block;
 }
 
-.navigation-list, .address-list, .social-list, .filters-list, .working-list {
+.navigation-list, .address-list, .social-list, .working-list {
   padding: 0;
   margin: 0;
   list-style: none;
@@ -763,10 +763,9 @@ img {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  margin-bottom: 50px;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin-bottom: 40px;
 }
 
 .filters-button {
@@ -797,6 +796,27 @@ img {
 
 .filters-item:not(:last-child) {
   margin-right: 8px;
+}
+
+@media screen and (max-width: 767px) {
+  .filters-item:nth-child(n + 4) {
+    margin-top: 15px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .filters-list {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .filters-list {
+    margin-bottom: 50px;
+  }
 }
 
 .working-list {
