--- a/sass/layout/_filrers.scss
+++ b/sass/layout/_filrers.scss
@@ -1,8 +1,7 @@
 .filters-list {
-  @extend %list;
   display: flex;
-  justify-content: center;
-  margin-bottom: 50px;
+  flex-wrap: wrap;
+  margin-bottom: 40px;
 }
 
 .filters-button {
@@ -36,3 +35,61 @@
 .filters-item:not(:last-child) {
   margin-right: 8px;
 }
+
+@media screen and (max-width: 767px) {
+  .filters-item:nth-child(n + 4) {
+    margin-top: 15px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .filters-list {
+    justify-content: center;
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .filters-list {
+    margin-bottom: 50px;
+  }
+}
+
+// .filters-list {
+//   @extend %list;
+//   display: flex;
+//   justify-content: center;
+//   margin-bottom: 50px;
+// }
+
+// .filters-button {
+//   display: inline-block;
+//   padding: 6px 22px;
+//   border: 0px;
+//   border-radius: 4px;
+
+//   font-family: inherit;
+//   font-weight: 500;
+//   font-size: 16px;
+//   line-height: 1.6;
+//   letter-spacing: 0.03em;
+//   background: #f5f4fa;
+//   color: var(--title-text-color);
+
+//   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+//     background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+//     box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+//   &:hover,
+//   &:focus {
+//     box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.12), 0px 1px 2px rgba(0, 0, 0, 0.08),
+//       0px 3px 1px rgba(0, 0, 0, 0.1);
+//     background-color: $accent-color;
+//     color: $primery-white-color;
+//     outline: none;
+//   }
+// }
+
+// .filters-item:not(:last-child) {
+//   margin-right: 8px;
+// }
