--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -71,7 +71,7 @@
     // max-width: 1600px;
     height: 600px;
     background-image: linear-gradient(rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8)),
-      url('../../images/header.jpg');
+      url('./../images/header.jpg');
   }
 
   .hero-title {
@@ -89,7 +89,7 @@
   screen and (min-width: 1200px) {
   .hero-fon {
     background-image: linear-gradient(rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8)),
-      url('../../images/header@2x.jpg');
+      url('./../images/header@2x.jpg');
   }
 }
 
