--- a/sass/layout/_working.scss
+++ b/sass/layout/_working.scss
@@ -1,15 +1,5 @@
-.working-list {
-  @extend %list;
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.working-link {
-  @extend %link;
-}
-
 .working-item {
-  width: 370px;
+  width: 450px;
   background: $primery-white-color;
 
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -19,35 +9,6 @@
     box-shadow: 1px 4px 6px rgba(0, 0, 0, 0.16), 0px 4px 4px rgba(0, 0, 0, 0.06),
       0px 1px 1px rgba(0, 0, 0, 0.12);
   }
-
-  &:not(:nth-last-child(-n + 3)) {
-    margin-bottom: 30px;
-  }
-
-  &:not(:nth-child(3n)) {
-    margin-right: 30px;
-  }
-}
-
-.card-content {
-  padding: 20px 24px;
-  border-left: 1px solid #eeeeee;
-  border-right: 1px solid #eeeeee;
-  border-bottom: 1px solid #eeeeee;
-}
-
-.working-title {
-  font-weight: 700;
-  font-size: 18px;
-  line-height: 2;
-  letter-spacing: 0.06em;
-  color: $title-text-color;
-}
-
-.working-text {
-  font-size: 16px;
-  line-height: 1.9;
-  color: $primery-text-color;
 }
 
 .working-box {
@@ -76,3 +37,152 @@
     transform: translateY(0);
   }
 }
+
+.card-content {
+  padding: 20px 24px;
+  border-left: 1px solid #eeeeee;
+  border-right: 1px solid #eeeeee;
+  border-bottom: 1px solid #eeeeee;
+}
+
+.working-title {
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+  color: $title-text-color;
+}
+
+.working-text {
+  font-size: 16px;
+  line-height: 1.9;
+  color: $primery-text-color;
+}
+
+.dot {
+  display: none;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .working-item:nth-child(2n + 1) {
+    margin-right: 30px;
+  }
+
+  .dot {
+    display: inline-block;
+  }
+
+  .star {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 1199px) {
+  .working-item:not(:last-child) {
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .working-list {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .working-item {
+    width: 354px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .working-item {
+    width: 370px;
+
+    &:not(:nth-last-child(-n + 3)) {
+      margin-bottom: 30px;
+    }
+
+    &:not(:nth-child(3n)) {
+      margin-right: 30px;
+    }
+  }
+}
+
+// .working-list {
+//   @extend %list;
+//   display: flex;
+//   flex-wrap: wrap;
+// }
+
+// .working-link {
+//   @extend %link;
+// }
+
+// .working-item {
+//   width: 370px;
+//   background: $primery-white-color;
+
+//   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+//   &:hover,
+//   &:focus {
+//     box-shadow: 1px 4px 6px rgba(0, 0, 0, 0.16), 0px 4px 4px rgba(0, 0, 0, 0.06),
+//       0px 1px 1px rgba(0, 0, 0, 0.12);
+//   }
+
+//   &:not(:nth-last-child(-n + 3)) {
+//     margin-bottom: 30px;
+//   }
+
+//   &:not(:nth-child(3n)) {
+//     margin-right: 30px;
+//   }
+// }
+
+// .card-content {
+//   padding: 20px 24px;
+//   border-left: 1px solid #eeeeee;
+//   border-right: 1px solid #eeeeee;
+//   border-bottom: 1px solid #eeeeee;
+// }
+
+// .working-title {
+//   font-weight: 700;
+//   font-size: 18px;
+//   line-height: 2;
+//   letter-spacing: 0.06em;
+//   color: $title-text-color;
+// }
+
+// .working-text {
+//   font-size: 16px;
+//   line-height: 1.9;
+//   color: $primery-text-color;
+// }
+
+// .working-box {
+//   position: relative;
+//   overflow: hidden;
+// }
+// .working-second-text {
+//   display: block;
+//   position: absolute;
+//   top: 0;
+//   left: 0;
+
+//   width: 100%;
+//   height: 100%;
+//   padding: 63px 24px;
+//   font-size: 18px;
+//   line-height: 1.55;
+//   color: $primery-white-color;
+//   background-color: rgba(33, 150, 243, 0.9);
+
+//   transform: translateY(100%);
+//   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+//   .working-item:hover &,
+//   .working-item:focus & {
+//     transform: translateY(0);
+//   }
+// }
