--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -973,7 +973,7 @@ img {
     margin-bottom: 60px;
   }
   .forma-container {
-    width: 450px;
+    max-width: 450px;
     margin-right: auto;
     margin-left: auto;
   }
