--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -20,8 +20,8 @@
   left: 50%;
   transform: translate(-50%, -50%);
 
-  min-width: 528px;
-  min-height: 581px;
+  min-width: 450px;
+  min-height: 609px;
   padding: 40px;
 
   background-color: #ffffff;
@@ -35,7 +35,7 @@
   font-style: normal;
   font-weight: 600;
   font-size: 20px;
-  line-height: 1.15;
+  line-height: 1.5;
   text-align: center;
 
   color: $title-text-color;
@@ -135,6 +135,7 @@
 
 .label-agreement {
   display: flex;
+  justify-content: center;
   align-items: center;
   font-style: normal;
   font-weight: normal;
@@ -169,7 +170,7 @@
 }
 
 .contract {
-  margin-left: 5.5px;
+  margin-left: 3px;
 
   color: #2196f3;
 }
@@ -188,7 +189,7 @@
   font-style: normal;
   font-weight: bold;
   font-size: 16px;
-  line-height: 1.87;
+  line-height: 1.88;
   letter-spacing: 0.06em;
 
   color: #ffffff;
@@ -231,3 +232,259 @@
     fill: #2196f3;
   }
 }
+
+@media screen and (max-width: 1199px) {
+  .label-agreement {
+    font-size: 12px;
+    line-height: 1.167;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .modal {
+    min-width: 528px;
+    min-height: 581px;
+  }
+
+  .modal-subtitle {
+    line-height: 1.15;
+  }
+
+  .contract {
+    margin-left: 5.5px;
+  }
+}
+
+// .backdrop {
+//   position: fixed;
+//   top: 0;
+//   left: 0;
+
+//   width: 100%;
+//   height: 100%;
+
+//   background-color: rgba(0, 0, 0, 0.2);
+// }
+
+// .backdrop.is-hidden {
+//   opacity: 0;
+//   pointer-events: none;
+// }
+
+// .modal {
+//   position: absolute;
+//   top: 50%;
+//   left: 50%;
+//   transform: translate(-50%, -50%);
+
+//   min-width: 528px;
+//   min-height: 581px;
+//   padding: 40px;
+
+//   background-color: #ffffff;
+//   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+//     0px 2px 1px rgba(0, 0, 0, 0.2);
+//   border-radius: 4px;
+// }
+
+// .modal-subtitle {
+//   margin-bottom: 30px;
+//   font-style: normal;
+//   font-weight: 600;
+//   font-size: 20px;
+//   line-height: 1.15;
+//   text-align: center;
+
+//   color: $title-text-color;
+// }
+
+// .form-field {
+//   position: relative;
+//   margin-bottom: 28px;
+// }
+
+// .form-field-comment {
+//   position: relative;
+//   margin-bottom: 20px;
+// }
+
+// .form-field-input {
+//   display: block;
+//   width: 100%;
+//   height: 40px;
+//   padding: 12px 44px 12px 42px;
+
+//   border: 1px solid rgba(33, 33, 33, 0.2);
+//   border-radius: 4px;
+
+//   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+//   &:focus {
+//     outline: none;
+//     border-color: #2196f3;
+//   }
+// }
+
+// .form-field-label {
+//   position: absolute;
+//   top: 50%;
+//   left: 42px;
+//   transform: translateY(-50%);
+
+//   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
+//     color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+//   .form-field-input:focus + &,
+//   .form-field-input:not(:placeholder-shown) + & {
+//     transform: translate(-23px, -45px);
+//     color: #2196f3;
+//   }
+// }
+
+// .form-field-svg {
+//   position: absolute;
+//   top: 50%;
+//   left: 19px;
+//   transform: translateY(-50%);
+
+//   fill: #212121;
+
+//   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+//   .form-field-input:focus ~ &,
+//   .form-field-input:not(:placeholder-shown) ~ & {
+//     fill: #2196f3;
+//   }
+// }
+
+// .comment {
+//   width: 100%;
+//   height: 120px;
+//   padding: 12px 44px 12px 16px;
+
+//   resize: none;
+
+//   border: 1px solid rgba(33, 33, 33, 0.2);
+//   border-radius: 4px;
+
+//   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+//   &:focus {
+//     border-color: #2196f3;
+//     outline: none;
+//   }
+// }
+
+// .form-field-comment-label {
+//   position: absolute;
+//   top: 12px;
+//   left: 16px;
+
+//   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
+//     color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+//   .comment:focus + &,
+//   .comment:not(:placeholder-shown) + & {
+//     transform: translateY(-40px);
+//     color: #2196f3;
+//   }
+// }
+
+// .label-agreement {
+//   display: flex;
+//   align-items: center;
+//   font-style: normal;
+//   font-weight: normal;
+// }
+
+// .checkbox {
+//   -webkit-appearance: none;
+// }
+
+// .checkbox-icon {
+//   display: inline-block;
+//   width: 16px;
+//   height: 15px;
+//   margin-right: 8px;
+
+//   /* background: #212121; */
+//   border: 1.75px solid #000000;
+//   border-radius: 2px;
+//   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+
+//   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+//     background-image 250ms cubic-bezier(0.4, 0, 0.2, 1),
+//     border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+//   .checkbox:checked + & {
+//     border-color: transparent;
+//     background-color: #2196f3;
+//     background-image: url('../images/icon-check.svg');
+//     background-size: contain;
+//     background-origin: border-box;
+//   }
+// }
+
+// .contract {
+//   margin-left: 5.5px;
+
+//   color: #2196f3;
+// }
+
+// .button-submit {
+//   display: block;
+//   width: 200px;
+//   height: 50px;
+//   margin-left: auto;
+//   margin-right: auto;
+//   margin-top: 30px;
+
+//   border: none;
+
+//   font-family: Roboto;
+//   font-style: normal;
+//   font-weight: bold;
+//   font-size: 16px;
+//   line-height: 1.87;
+//   letter-spacing: 0.06em;
+
+//   color: #ffffff;
+//   background: #2196f3;
+//   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+//   border-radius: 4px;
+//   cursor: pointer;
+
+//   &:focus {
+//     outline: none;
+//   }
+// }
+
+// .button-close {
+//   position: absolute;
+//   top: 8px;
+//   right: 8px;
+
+//   display: flex;
+//   justify-content: center;
+//   align-items: center;
+//   width: 30px;
+//   height: 30px;
+
+//   background-color: #ffffff;
+//   border: 1px solid rgba(0, 0, 0, 0.1);
+//   border-radius: 50%;
+//   cursor: pointer;
+
+//   &:focus {
+//     outline: none;
+//   }
+// }
+
+// .button-close-svg {
+//   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+//   &:hover,
+//   &:focus {
+//     fill: #2196f3;
+//   }
+// }
